resolved overflow isssue

--- a/task2/main.css
+++ b/task2/main.css
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+}
+
 body {
     width: 1440px;
     max-width: calc(100% - 20px);
